--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "pwm_speaker.h": "c",
-        "istream": "c"
+        "istream": "c",
+        "microbit_v2.h": "c",
+        "capacitive_touch.h": "c"
     }
 }
